# internal/services/user/internal/user/features/logout/v1/dtos/logout_user_request_dto.go
@@ -1,0 +1,4 @@
+package dtos
+
+type LogoutUserRequestDto struct {
+}
